--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AUTH_PAY=paymongosecretid
+
+PAYPAL_CLIENT_ID=paypalclientid
+PAYPAL_CLIENT_SECRET=paypalsecret
+PAYPAL_CURRENCY=PHP
